<resources>
    <string name="app_name">SAXPOS Point of Sales</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="order_confirm_order">Confirm Order</string>
    <string name="order_payment">Payment</string>
    <string name="decimal">.</string>
    <string name="order_unconfirmed">Unconfirmed</string>
    <string name="payment_title">Payment for:  </string>
    <string name="delivery_details_name">Name:</string>
    <string name="delivery_details_address">Address:</string>
    <string name="delivery_details_postcode">Postcode:</string>
    <string name="delivery_details_phone">Phone:</string>
    <string name="delivery_details_fee">Delivery Fee:</string>
    <string name="delivery_details_name_hint">Customer Name</string>
    <string name="delivery_details_postcode_hint">Post Code</string>
    <string name="delivery_details_phone_hint">Phone Number</string>
    <string name="delivery_details_fee_hint">Delivery Fee</string>
    <string name="delivery_details_address_1_hint">Address Line 1</string>
    <string name="delivery_details_address_2_hint">Address Line 2</string>
    <string name="delivery_details_address_3_hint">Address Line 3</string>
    <string name="delivery_details_address_confirm">Confirm Delivery Details</string>
    <string name="main_fab_takeaway">Takeaway</string>
    <string name="main_fab_delivery">Delivery</string>
    <string name="order_order">Order:</string>
    <string name="order_order_placeholder">Order</string>
    <string name="order_quantity">Quantity:</string>
    <string name="order_quantity_placeholder">9999</string>
    <string name="order_subtotal">Subtotal:</string>
    <string name="order_subtotal_placeholder">$9999.99</string>
    <string name="order_confirm_button">Confirm Order</string>
    <string name="payment_amount">Amount Due:</string>
    <string name="payment_paid">Paid:</string>
    <string name="payment_change">Change</string>
    <string name="payment_0">0</string>
    <string name="payment_00">00</string>
    <string name="payment_1">1</string>
    <string name="payment_2">2</string>
    <string name="payment_4">4</string>
    <string name="payment_3">3</string>
    <string name="payment_5">5</string>
    <string name="payment_6">6</string>
    <string name="payment_7">7</string>
    <string name="payment_8">8</string>
    <string name="payment_9">9</string>
    <string name="payment_back">bs</string>
    <string name="payment_clear">Clear</string>
    <string name="payment_pay">Pay</string>
    <string name="payment_placeholder">$9999.99</string>
    <string name="table_name_placeholder">Table 999</string>
    <string name="table_status_placeholder">Booked</string>
    <string name="table_guests_placeholder">999</string>
    <string name="table_total_placeholder">$9999.99</string>
    <string name="table_payment_button">Payment</string>
    <string name="order_cardview_name">Add Item Name Here</string>
    <string name="order_cardview_price">$9999.99</string>
    <string name="order_current_remove_button">remove button</string>
    <string name="order_current_cardview_quantity">x99</string>
    <string name="order_current_cardview_name">Add Product Here</string>
    <string name="order_current_cardview_price">$999.99</string>
    <string name="order_current_add_button">add button</string>
    <string name="action_delivery_manager">Delivery Manager</string>
    <string name="title_activity_delivery_manager">DeliveryManagerActivity</string>
    <string name="delivery_manager_title">Deliveries</string>
    <string name="main_title">POS Application</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="fragment_delivery_manager_button_placeholder">Allocate Driver</string>
    <string name="delivery_id_placeholder">1234</string>
    <string name="name_placeholder">Greg Smith</string>
    <string name="delivery_status_placeholder">Unallocated</string>
    <string name="title_activity_delivery_location">Map</string>
    <string name="title_activity_settings_products">SettingsProductsActivity</string>
    <string name="title_activity_delivery_managerr">DeliveryManagerrActivity</string>
    <string name="add_new_group">Add New Group</string>
    <string name="confirm">Confirm</string>
    <string name="group_id">Group ID:</string>
    <string name="group_name">Group Name:</string>
    <string name="table_id">Table ID:</string>
    <string name="table_name">Table Name:</string>
    <string name="table_name_hint">Table Name</string>
    <string name="group_name_hint">Group Name</string>
    <string name="ip_address">IP Address:</string>
    <string name="ip_address_hint">192.168.1.100</string>
    <string name="database_name">Database Name:</string>
    <string name="database_hint">myDB</string>
    <string name="username">Username:</string>
    <string name="username_hint">root</string>
    <string name="password">Password:</string>
    <string name="password_hint">123</string>
    <string name="network_configuration_button">Set Network Configuration Settings</string>
    <string name="product_id">Product ID:</string>
    <string name="product_name">Product Name:</string>
    <string name="price">Price:</string>
    <string name="add_product_button">Add New Product</string>
    <string name="product_name_hint">Product Name</string>
    <string name="price_hint">Price</string>
    <string name="restaurant_name">Restaurant Name:</string>
    <string name="restaurant_name_hint">My Restaurant</string>
    <string name="address_line_1">Address Line 1:</string>
    <string name="address_line_1_hint">123 Fake St</string>
    <string name="address_line_2">Address Line 2:</string>
    <string name="address_line_2_hint">Fake Town</string>
    <string name="address_line_3">Address Line 3:</string>
    <string name="postcode">Postcode:</string>
    <string name="poscode_hint">3333</string>
    <string name="phone">Phone:</string>
    <string name="phone_hint">0433333333</string>
    <string name="restaurant">Restaurant</string>
    <string name="tables">Tables</string>
    <string name="groups">Groups</string>
    <string name="products">Products</string>
    <string name="database">Database</string>
    <string name="network">Network</string>
    <string name="delete_database_button">Delete Database</string>
    <string name="location_button">Location Button</string>
    <string name="sync_button">Sync Button</string>
    <string name="delete">Delete</string>
    <string name="current_order">Current Order</string>
    <string name="drivers">Drivers</string>
    <string name="driver_id">Driver ID:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name_placeholder">John</string>
    <string name="last_name_placeholder">Smith</string>
    <string name="network_mode">Network Mode</string>
    <string name="postcode_placeholder">3333</string>
    <string name="table_number">Table Number</string>

</resources>
