<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ass3.axue2.posapplication.activities.DeliveryDetailsActivity"
>

    <TextView
        android:id="@+id/delivery_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_details_name"
        android:textColor="@color/BLACK"
        android:textSize="18sp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:id="@+id/delivery_details_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/delivery_details_address"
        android:textColor="@color/BLACK"
        android:textSize="18sp"
        android:layout_below="@+id/delivery_details_name_edit"
        android:layout_alignEnd="@+id/delivery_details_phone" />

    <TextView
        android:id="@+id/delivery_details_postcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/delivery_details_postcode"
        android:textColor="@color/BLACK"
        android:textSize="18sp"
        android:layout_below="@+id/delivery_details_address_3_edit"
        android:layout_alignEnd="@+id/delivery_details_address" />

    <TextView
        android:id="@+id/delivery_details_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/delivery_details_phone"
        android:textColor="@color/BLACK"
        android:textSize="18sp"
        android:layout_below="@+id/delivery_details_postcode"
        android:layout_alignStart="@+id/delivery_details_name" />

    <TextView
        android:id="@+id/delivery_details_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/delivery_details_fee"
        android:textColor="@color/BLACK"
        android:textSize="18sp"
        android:layout_below="@+id/delivery_details_phone_edit"
        android:layout_alignEnd="@+id/delivery_details_phone" />

    <EditText
        android:id="@+id/delivery_details_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/delivery_details_name"
        android:layout_alignBottom="@+id/delivery_details_name"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/delivery_details_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/delivery_details_postcode_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/delivery_details_postcode"
        android:layout_alignBottom="@+id/delivery_details_postcode"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/delivery_details_postcode_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/delivery_details_phone_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/delivery_details_phone"
        android:layout_alignBottom="@+id/delivery_details_phone"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/delivery_details_phone_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/delivery_details_fee_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/delivery_details_fee"
        android:layout_alignBottom="@+id/delivery_details_fee"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/delivery_details_fee_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/delivery_details_address_1_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/delivery_details_address"
        android:layout_alignBottom="@+id/delivery_details_address"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/delivery_details_address_1_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/delivery_details_address_2_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/delivery_details_address_1_edit"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/delivery_details_address_2_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/delivery_details_address_3_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/delivery_details_address_2_edit"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/delivery_details_address_3_hint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/delivery_details_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/delivery_details_fee"
        android:background="@color/DeliveryDetailsConfirmButton"
        android:text="@string/delivery_details_address_confirm"
        android:textColor="@color/WHITE" />

</RelativeLayout>