<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.ass3.axue2.posapplication.activities.Settings.SettingsDriverActivity"
android:orientation="vertical">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/LinearLayout"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/settings_driver_rv"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/settings_driver_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/settingsConfirmButton"
        android:text="@string/add_new_group"
        android:visibility="gone" />

</LinearLayout>

<RelativeLayout
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/LinearLayout">

    <Button
        android:id="@+id/settings_driver_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/settingsButton"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="25dp"
        android:text="@string/driver_id"
        android:textColor="@color/BLACK" />

    <TextView
        android:id="@+id/settings_driver_id_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:textColor="@color/BLACK" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="24dp"
        android:text="@string/first_name"
        android:textColor="@color/BLACK" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/settings_driver_last_name_editText"
        android:layout_alignBottom="@+id/settings_driver_last_name_editText"
        android:layout_alignStart="@+id/textView8"
        android:text="@string/last_name"
        android:textColor="@color/BLACK" />

    <EditText
        android:id="@+id/settings_driver_first_name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_marginStart="48dp"
        android:layout_toEndOf="@+id/settings_driver_id_textview"
        android:ems="10"
        android:hint="@string/first_name_placeholder"
        android:inputType="text"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/settings_driver_last_name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/settings_driver_first_name_editText"
        android:layout_below="@+id/settings_driver_first_name_editText"
        android:ems="10"
        android:hint="@string/last_name_placeholder"
        android:inputType="text"
        android:textSize="12sp" />
</RelativeLayout>

</RelativeLayout>
