<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ass3.axue2.posapplication.activities.OrderActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/order_current_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/OrderCurrentButton"
                android:text="@string/current_order" />

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:tabMode="scrollable" />

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/order_rv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appbar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:background="@drawable/border"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_order"
                android:textSize="18sp"
                android:textColor="@color/BLACK"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_order_placeholder"
                android:textSize="18sp"
                android:textColor="@color/BLACK"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="5000dp"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_quantity"
                android:textSize="18sp"
                android:textColor="@color/BLACK"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/order_quantity"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/order_quantity_placeholder"
                android:textSize="18sp"
                android:textColor="@color/BLACK" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/order_subtotal"
                android:textSize="18sp"
                android:textColor="@color/BLACK"/>
            <TextView
                android:id="@+id/order_subtotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/order_subtotal_placeholder"
                android:textSize="18sp"
                android:textColor="@color/BLACK"/>
        </LinearLayout>

        <Button
            android:id="@+id/order_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/OrderConfirmButton"
            android:text="@string/order_confirm_button"
            android:textColor="@color/PaymentButtonText" />
    </LinearLayout>



</RelativeLayout>
