<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/delivery_manager_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/delivery_manager_list_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:cardBackgroundColor="@color/WHITE">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/delivery_manager_list_cv_id_text"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/delivery_id_placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/delivery_manager_list_cv_customer_text"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"

                android:layout_toEndOf="@+id/delivery_manager_list_cv_id_text"
                android:gravity="center"
                android:text="@string/name_placeholder" />

            <TextView
                android:id="@+id/delivery_manager_list_cv_address_text"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_toEndOf="@+id/delivery_manager_list_cv_customer_text"
                android:gravity="center"
                android:text="@string/delivery_status_placeholder" />

            <TextView
                android:id="@+id/delivery_manager_list_cv_postcode_text"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/delivery_manager_list_cv_customer_text"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/delivery_manager_list_cv_address_text"
                android:gravity="center"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/postcode_placeholder" />

            <TextView
                android:id="@+id/delivery_manager_list_cv_total_text"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/delivery_manager_list_cv_postcode_text"
                android:gravity="center"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/table_total_placeholder" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>

