<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ass3.axue2.posapplication.activities.Settings.SettingsProductActivity">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/appbar"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/settings_product_rv"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/settings_product_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/settingsConfirmButton"
            android:text="@string/add_product_button"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/settings_product_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:background="@color/settingsButton"
                android:text="@string/confirm" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="27dp"
                android:layout_marginTop="25dp"
                android:text="@string/product_id"
                android:textColor="@color/BLACK" />

            <TextView
                android:id="@+id/settings_product_id_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:textColor="@color/BLACK" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="24dp"
                android:text="@string/product_name"
                android:textColor="@color/BLACK" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView8"
                android:layout_below="@+id/settings_product_name_editText"
                android:paddingTop="10dp"
                android:text="@string/group_name"
                android:textColor="@color/BLACK" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/settings_product_price_editText"
                android:layout_alignBottom="@+id/settings_product_price_editText"
                android:layout_alignStart="@+id/textView9"
                android:text="@string/price"
                android:textColor="@color/BLACK" />

            <EditText
                android:id="@+id/settings_product_name_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView8"
                android:layout_alignBottom="@+id/textView8"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/settings_product_id_textview"
                android:ems="10"
                android:hint="@string/product_name_hint"
                android:inputType="text"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/settings_product_price_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/spinner2"
                android:layout_below="@+id/spinner2"
                android:ems="10"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/settings_product_name_editText"
                android:layout_alignStart="@+id/settings_product_name_editText"
                android:layout_below="@+id/settings_product_name_editText" />

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

</RelativeLayout>
